--- a/Home/Home/Links/Links/font-awesome/css/font-awesome.css
+++ b/Home/Home/Links/Links/font-awesome/css/font-awesome.css
@@ -537,7 +537,7 @@
 .fa-bar-chart:before {
   content: "\f080";
 }
-.fa-twitter-square:before {
+.fa-hand-spock-o-square:before {
   content: "\f081";
 }
 .fa-facebook-square:before {
@@ -607,7 +607,7 @@
 .fa-phone-square:before {
   content: "\f098";
 }
-.fa-twitter:before {
+.fa-hand-spock-o:before {
   content: "\f099";
 }
 .fa-facebook:before {
