--- a/Home/Home/home.css
+++ b/Home/Home/home.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'distant_galaxyregular';
+    src: url('../../font/DISTGRG_-webfont.eot');
+    src: url('../../font/DISTGRG_-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../font/DISTGRG_-webfont.woff') format('woff'),
+         url('../../font/DISTGRG_-webfont.ttf') format('truetype'),
+         url('../../font/DISTGRG_-webfont.svg#distant_galaxyregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -62,3 +76,7 @@
     background: black;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
+    
+    body {
+    font-family: "distant_galaxyregular";
+}
