--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -35,7 +35,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/Galaxy.jpg) no-repeat center center;
+    background: url(images/Links/Galaxy.jpg) no-repeat center center;
     background-size: cover;
 }
 
