--- a/css/vote.css
+++ b/css/vote.css
@@ -1,5 +1,5 @@
 body {
-	background-image:url('../images/deathstar.jpg');
+	background-image:url('../images/spacePlanets.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
